--- a/index.html
+++ b/index.html
@@ -28,37 +28,31 @@
             <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
-        <!-- Додай інші <section>
-  <h2>Our Team</h2>
-  <ul>
-    <li>
-      <img src="images/mark.jpg" width="264" alt="Mark Guerrero, Product Designer">
-      <h3>Mark Guerrero</h3>
-      <p>Product Designer</p>
-    </li>
-    <li>
-      <img src="images/tom.jpg" width="264" alt="Tom Ford, Frontend Developer">
-      <h3>Tom Ford</h3>
-      <p>Frontend Developer</p>
-    </li>
-    <li>
-      <img src="images/camila.jpg" width="264" alt="Camila Garcia, Marketing">
-      <h3>Camila Garcia</h3>
-      <p>Marketing</p>
-    </li>
-    <li>
-      <img src="images/daniel.jpg" width="264" alt="Daniel Wilson, UI Designer">
-      <h3>Daniel Wilson</h3>
-      <p>UI Designer</p>
-    </li>
-  </ul>
-</section>секції пізніше -->
-    </main>
-
-    <footer>
-        <a href="./">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-    </footer>
-</body>
-
-</html>
+        
+        <!-- Секція Our Team -->
+        <section>
+            <h2>Our Team</h2>
+            <ul>
+                <li>
+                    <img src="images/mark.jpg" width="264" alt="Mark Guerrero, Product Designer">
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="images/tom.jpg" width="264" alt="Tom Ford, Frontend Developer">
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="images/camila.jpg" width="264" alt="Camila Garcia, Marketing">
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="images/daniel.jpg" width="264" alt="Daniel Wilson, UI Designer">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+        </main>
